# cappuccino

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  README_CN.md  README_en.md  agent.py  config.py  pyproject.toml  request_demo.py  requirements.txt  run_server.py  server.py
agent/: __init__.py  agent.py  dispatcher.py  executor.py  memory.py  planner.py  summarizer.py  verifier.py
agent/executors/: __init__.py  code_executor.py  executor_list.json  interact_executor.py  scroll_executor.py
agent/mcp/: __init__.py  client.py
app/: agent.py  dispatcher.py  executor.py  planner.py  server.py  utils.py  verifier.py
app/executors/: __init__.py  executor_list.json  interact_executor.py  ocr_executor.py  scroll_executor.py
computer/: gui_action.py  screen_capture.py
llm/executor/: Qwen2_5_VL_executor.py
llm/planner/: QwenVL_planner.py  general_planner.py  multimodal_planner.py  planner_utils.py  text_planner.py
server/: __init__.py  commands.py  handlers.py  logging_config.py  mcp_config.py  messages.py  server.py  utils.py
server/memory/: __init__.py  context.py  manager.py  storage.py
tests/: test_mcp_client.py
tutorial/: TELEGRAM_SETUP.md
