[project]
name = "cappuccino"
version = "0.1.0"
description = "一个解放你双手的本地自动化智能体"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.8",
    "ipython==8.12.3",
    "openai==1.64.0",
    "Pillow==11.1.0",
    "PyAutoGUI==0.9.54",
    "pydantic==2.10.6",
    "pyperclip==1.9.0",
    "qwen_agent==0.0.15",
    "transformers==4.49.0",
    "httpx==0.27.2",
    "uvicorn==0.34.0",
    "torch",
    "python-dateutil",
    "python-docx",
    "python-pptx",
    "openpyxl",
    "reportlab",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "agent"]

[dependency-groups]
dev = []
